--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ button,
 input,
 select,
 textarea {
-    color: #222;
+    /*color: #222;*/
 }
 
 html {
@@ -27,12 +27,14 @@ html {
 }
 
 ::-moz-selection {
-    background: #b3d4fc;
+    /*background: #b3d4fc;*/
+    
     text-shadow: none;
 }
 
 ::selection {
-    background: #b3d4fc;
+    /*background: #b3d4fc;*/
+    
     text-shadow: none;
 }
 
@@ -71,7 +73,6 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
 /*header {
     height: 30px;
     width: 100%;
@@ -86,28 +87,26 @@ a {
     text-decoration: none;
 }
 
+timeCreated {
+    /*font-size: 9px;*/
+}
+
 main {
     width: 100%;
     background: #000;
     font-family: Courier-New, serif;
     font-style: normal;
-    color: #E7DCD0;
+    /*color: #E7DCD0;*/
+    
     font-size: 14px;
     text-align: left;
     box-sizing: border-box;
 }
 
 main section {
-    background-color: #242424;
+    /*background-color: #242424;*/
+    
     padding: 0 15px 5px 15px;
-}
-
-h1 {
-    font-style: italic;
-    color: #A06CB7;
-    font-size: 24px;
-    margin-top: 10px;
-    margin-bottom: 10px;
 }
 
 p {
@@ -122,7 +121,7 @@ ul {
 
 footer {
     width: 100%;
-    margin-top: 100px color: #766E79;
+    /*margin-top: 100px color: #766E79;*/
 }
 
 footer p {
