--- a/css/main.css
+++ b/css/main.css
@@ -1,93 +1,49 @@
 /*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */
-/*@font-face {
-    font-family: "Fanwood Text";
-    src: url(FanwoodText-Regular.ttf);
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Fanwood Text";
-    src: url(FanwoodText-Italic.ttf);
-    font-style: italic;
-}
-*/
-
-html,
-button,
-input,
-select,
-textarea {
-    /*color: #222;*/
-}
 
 html {
-    font-size: 1em;
-    line-height: 1.4;
+    /*font-size: 1em;*/
+    
+    line-height: 1.5;
     background-color: white;
 }
 
-::-moz-selection {
-    /*background: #b3d4fc;*/
-    
-    text-shadow: none;
-}
-
 ::selection {
-    /*background: #b3d4fc;*/
-    
+    background: #b3d4fc;
     text-shadow: none;
 }
 
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
-
-audio,
-canvas,
-img,
-video {
-    vertical-align: middle;
-}
-
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
-
-textarea {
-    resize: vertical;
-}
-
-.browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-/*header {
-    height: 30px;
-    width: 100%;
-    background: #271C2C;
-    border-bottom: solid 10px black;
-}
-*/
-
-a {
-    font-family: Courier New, sans-serif;
-    font-size: 12px;
+header {
+    font-family: Georgia, sans-serif;
+    /*font-size: 2em;*/
+    
     text-decoration: none;
     font-face: bold;
+    color: black;
+    padding: 2px;
+    background-color: white;
+    margin: 2px;
+    left: 30px;
+    position: relative;
+    display: inline-block;
+    text-align: left;
+    width: 50%;
+    border-bottom-width: 15px;
+}
+
+#headRow {
+    margin-left: 100px;
+    border-width: thick;
+    border-bottom: 5px solid black;
+}
+
+a {
+    font-family: Courier New;
+    font-size: 0.8em;
+    font-style: bold;
     color: white;
     padding: 2px;
+    /*height: 30px;*/
+    
     background-color: black;
     margin: 2px;
     left: 200px;
@@ -96,80 +52,18 @@ a {
 }
 
 timeCreated {
+    font-family: Garamond;
     font-style: italic;
     font-size: 0.75em;
     color: gray;
     width: 120px;
-    margin-left: 100px;
+    margin-left: 200px;
     display: inline-block;
     text-align: right;
-}
-
-main {
-    width: 100%;
-    background: #000;
-    font-family: Courier-New, serif;
-    font-style: normal;
-    /*color: #E7DCD0;*/
-    
-    font-size: 14px;
-    text-align: left;
-    box-sizing: border-box;
-}
-
-main section {
-    /*background-color: #242424;*/
-    
-    padding: 0 15px 5px 15px;
-}
-
-p {
-    margin: 0;
-}
-
-ul {
-    list-style-type: none;
-    margin-left: 0px;
-    padding-left: 0px;
-}
-
-footer {
-    width: 100%;
-    /*margin-top: 100px color: #766E79;*/
-}
-
-footer p {
-    background: black;
-    padding-left: 980px;
-    margin: 0;
 }
 /* ==========================================================================
    Media Queries
    ========================================================================== */
-
-@media only screen and (min-width: 35em) {}
-
-@media print,
-(-o-min-device-pixel-ratio: 5/4),
-(-webkit-min-device-pixel-ratio: 1.25),
-(min-resolution: 120dpi) {}
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-.ir {
-    background-color: transparent;
-    border: 0;
-    overflow: hidden;
-    *text-indent: -9999px;
-}
-
-.ir:before {
-    content: "";
-    display: block;
-    width: 0;
-    height: 150%;
-}
 
 .hidden {
     display: none !important;
@@ -213,59 +107,4 @@ footer p {
 
 .clearfix {
     *zoom: 1;
-}
-/* ==========================================================================
-   Print styles
-   ========================================================================== */
-
-@media print {
-    * {
-        background: transparent !important;
-        color: #000 !important;
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-    .ir a:after,
-    a[href^="javascript:"]:after,
-    a[href^="#"]:after {
-        content: "";
-    }
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-    thead {
-        display: table-header-group;
-    }
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-    img {
-        max-width: 100% !important;
-    }
-    @page {
-        margin: 0.5cm;
-    }
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
 }
