--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 
 html {
     line-height: 1.5;
-    background-color: white;
+    background-color: #FCFAFA;
 }
 
 ::selection {
@@ -12,27 +12,22 @@ html {
 
 header {
     font-family: Courier;
-    /*font-size: 2em;*/
-    
+    font-size: 1.2em;
     text-decoration: none;
-    /*font-style: bold;   this never works. why?   */
-    
+    font-weight: 500;
     color: black;
     padding: 2px;
-    background-color: white;
     margin: 2px;
-    left: 30px;
+    left: 4.5%;
     position: relative;
     display: inline-block;
     text-align: left;
-    width: 50%;
-    border-bottom-width: 15px;
+    width: 60%;
 }
 
 #headRow {
-    margin-left: 100px;
-    border-width: thick;
-    border-bottom: 5px solid black;
+    margin-left: 12%;
+    border-bottom: 1px solid black;
 }
 
 .message {
@@ -40,18 +35,44 @@ header {
     font-weight: 100;
 }
 
+input {
+    font-family: courier new;
+    font-size: 1.5em;
+    font-weight: 100;
+    border-style: solid;
+    border-width: 0px 0px 1px 0px;
+    border-color: lightgray;
+    width: 47%;
+    color: #0DAAFF;
+}
+
 a {
     font-family: Courier New;
     font-weight: 600;
     color: white;
     padding: 2px;
-    /*height: 30px;*/
-    
     background-color: black;
     margin: 2px;
     left: 200px;
     display: inline-block;
     text-align: right
+}
+
+button {
+    font-family: Courier New;
+    color: #ffffff;
+    font-size: 1em;
+    padding: 9px 5px 5px 5px;
+    background: #d1d1d1;
+    text-decoration: none;
+    border: none;
+}
+
+button:hover {
+    background: #85FF00;
+    /*//#3d3d3d; */
+    
+    text-decoration: none;
 }
 
 .livestamp {
